--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <input id="date" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="start-tome">Let's meet up at </label>
-            <input id="start-time" class="form-control" type="text">
+            <label for="start">Let's meet up at </label>
+            <input id="start" class="form-control" type="text">
           </div>
           <div class="form-group">
             <label for="end">We'll say goodbye at </label>
