--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input id="name" class="form-control" type="text">
           </div>
           <div class="form-group">
-            <label for="date">Whne do you want to hang?</label>
+            <label for="date">When do you want to hang?</label>
             <input id="date" class="form-control" type="text">
           </div>
           <div class="form-group">
@@ -37,8 +37,8 @@
 
       <div id="hang-out">
         <h1>We're gonna have so much fun!</h1>
-        <p>Thanks, <span class="name"></span> for scheduling a time to hang out!</p>
-        <p>I'll meet you at Townshends Tea House on <span class="date"></span>, at <span class="start"></start>. We'll hang out until <span class="end"></span>, at which point we will part ways.<p>
+        <p>Thanks, <span class="name"></span>, for scheduling a time to hang out!</p>
+        <p>I'll meet you at Townshends Tea House on <span class="date"></span>, at <span class="start"></span>. We'll hang out until <span class="end"></span>, at which point we will part ways.<p>
       </div>
 
     </div>
